--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   file_picker: ^4.5.1
   http: ^0.13.4
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
